--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@heroicons/react": "^2.2.0",
     "lucide-react": "^0.511.0",
     "react": "^18.2.0",
+    "react-day-picker": "^9.7.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.6.0",
